--- a/app/src/main/res/layout/activity_si.xml
+++ b/app/src/main/res/layout/activity_si.xml
@@ -55,4 +55,15 @@
         android:layout_height="wrap_content"
         android:text="Main"
         android:id="@+id/btnMain"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Image"
+        android:id="@+id/btnImage"/>
+
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
